--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           alert('Đăng ký thành công!');
 
           // Chuyển hướng đến trang đăng nhập
-          window.location.href = 'https://sites.google.com/view/shopkakogm';
+          window.location.href = 'https://Duc506.github.io';
         });
 
         // Sử dụng HTML5 validation để kiểm tra tên đăng nhập, email và mật khẩu
