--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <button type="submit" class="btn btn-primary btn-block" id="btnRegister">Đăng ký</button>
       </form>
-      <p>Nếu đã có tài khoản? Hãy <a href="https://sites.google.com/view/shopkakogm">đăng nhập</a>.</p>
+      <p>Nếu đã có tài khoản? Hãy <a href="https://Duc506.github.io">đăng nhập</a>.</p>
     </div>
 
     <!-- JavaScript -->
@@ -55,7 +55,7 @@
           alert('Đăng ký thành công!');
 
           // Chuyển hướng đến trang đăng nhập
-          window.location.href = 'https://Duc506.github.io';
+          window.location.href = 'sites.google.com/view/shopkakogm';
         });
 
         // Sử dụng HTML5 validation để kiểm tra tên đăng nhập, email và mật khẩu
